--- a/discoveryServer/src/main/resources/discoveryserver.yml
+++ b/discoveryServer/src/main/resources/discoveryserver.yml
@@ -9,9 +9,12 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+  server:
+    enable-self-preservation: false
   instance:
     non-secure-port-enabled: false
     secure-port-enabled: true
+
 
 ---
 spring:
