--- a/web-ui/src/main/resources/application.properties
+++ b/web-ui/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port=8080
 spring.application.name=webui
 
 eureka.instance.instance-id=${spring.application.name}:${random.value}
+
+debug=true
