WebUI - authentication using Google as Authorization Server. Using JWT to authenticate calls between WebUI and QuoteService. More detailed logging configuration

--- a/quoteService/src/main/resources/quoteservice.properties
+++ b/quoteService/src/main/resources/quoteservice.properties
@@ -1,7 +1,19 @@
 spring.application.name=quoteService
 server.port=${PORT:0}
 
-eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.instance-id=${spring.application.name}.${random.value}
 
 #just for a test
 name=localquoteService
+
+
+#debug=true
+#trace=true
+spring.http.log-request-details=true
+logging.level.org.springframework.web=TRACE
+logging.level.org.springframework.security=TRACE
+#logging.level.org.springframework=TRACE
+#logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
+
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
