Authorization server implementation. No login via Google/Gihub for now

--- a/quoteService/src/main/resources/quoteservice.properties
+++ b/quoteService/src/main/resources/quoteservice.properties
@@ -9,11 +9,17 @@ name=localquoteService
 
 #debug=true
 #trace=true
+logging.level.reactor: debug
 spring.http.log-request-details=true
 logging.level.org.springframework.web=TRACE
 logging.level.org.springframework.security=TRACE
 #logging.level.org.springframework=TRACE
 #logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
 
+# Authentication server configuration
+#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
 
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
+authserver.url=http://authserver:8090
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${authserver.url}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${authserver.url}/.well-known/jwks.json
+spring.security.oauth2.client.provider.authserver.user-name-attribute=sub
