Methods security - custom #jwt.hasScope() implementation in QuoteService. APPLICATION_STREAM_JSON implementation in QuoteService - just an example. Logs grouping in WebUI

--- a/web-ui/src/main/resources/webui.yml
+++ b/web-ui/src/main/resources/webui.yml
@@ -6,6 +6,14 @@ spring.application.name: webui
 eureka.instance.instance-id:
   ${spring.application.name}:${random.value}
 
+# log groups
+logging:
+  group:
+    yamt: org.slhouse.*
+
+logging.level.yamt: DEBUG
+
+# Debugging logging
 debug: true
 trace: true
 logging.level.reactor: debug
