--- a/quoteService/pom.xml
+++ b/quoteService/pom.xml
@@ -62,6 +62,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-oauth2-client</artifactId>
 		</dependency>
+		<dependency> <!--Needed for OAuth2MethodSecurityExpressionHandler-->
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
+			<version>2.3.5.RELEASE</version>
+		</dependency>
 
 
 		<dependency>
