--- a/web-ui/src/main/resources/webui.yml
+++ b/web-ui/src/main/resources/webui.yml
@@ -16,7 +16,7 @@ logging.level.yamt: DEBUG
 # Debugging logging
 debug: true
 trace: true
-logging.level.reactor: debug
+#logging.level.reactor: debug
 spring.http.log-request-details: true
 logging.level.org.springframework.web: TRACE
 logging.level.org.springframework.security: TRACE
