QuoteService JWT token accept testing

--- a/quoteService/src/main/resources/quoteservice.properties
+++ b/quoteService/src/main/resources/quoteservice.properties
@@ -9,7 +9,7 @@ name=localquoteService
 
 #debug=true
 #trace=true
-logging.level.reactor: debug
+#logging.level.reactor: debug
 spring.http.log-request-details=true
 logging.level.org.springframework.web=TRACE
 logging.level.org.springframework.security=TRACE
