--- a/web-ui/src/main/resources/webui.yml
+++ b/web-ui/src/main/resources/webui.yml
@@ -1,10 +1,8 @@
-name:
-  localWebUI
+name: localWebUI
 
 server.port: 8080
 spring.application.name: webui
-eureka.instance.instance-id:
-  ${spring.application.name}:${random.value}
+eureka.instance.instance-id: ${spring.application.name}:${random.value}
 
 # log groups
 logging:
@@ -51,14 +49,5 @@ spring:
         jwt:
           jwk-set-uri: ${authserver.url}/.well-known/jwks.json
 
-
-
 #            user-info-uri : ${authserver.url}/userinfo
-
-
-
-
-#      resourceserver:
-#        jwt:
-#         jwk-set-uri: https://www.googleapis.com/oauth2/v3/certs
 
